--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-
-{
-    "description": "GameItems - Thor's Hammer",
-    "external_url": "https://forum.openzeppelin.com",
-    "image": "https://openmoji.org/data/color/svg/1F528.svg",
-    "name": "Thor's Hammer R09922164"
-  }
+<html lang="en">
+    <h1>
+        API Page
+    </h1>
+</html>
